operations/backend-pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: pod-shrtify-de-backend
  labels:
    app: shrtify-de-backend
spec:
  containers:
    - name: shrtify-de-backend
      image: localhost:5000/backend-shrtify-de:latest
      imagePullPolicy: Always
      resources:
        requests:
          memory: "50Mi"
          cpu: "150m"
        limits:
          memory: "65Mi"
          cpu: "180m"
