operations/backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: shrtify-de-service-backend
spec:
  selector:
    app: shrtify-de-backend
  ports:
    - port: 3000
