operations/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: shrtify-de-service-frontend
spec:
  selector:
    app: shrtify-de-frontend
  ports:
    - port: 80
