operations/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-shrtify-de-frontend
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: shrtify.de 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shrtify-de-service-frontend
            port:
              number: 80
  tls:
    - hosts:
        - shrtify.de
      secretName: ingress-shrtify-de-tls
